# vigil-tracker

./: .env.template  .gitignore  README.md  alerter.py  com.tracker.summary.plist  com.tracker.web.plist  com.vigil.summarizer.plist  com.vigil.tracker.plist  config.py  install.sh  pin_auth.py  platform_common.py  pyproject.toml  requirements.txt  summarizer.py  tracker.py  uninstall.sh  vigil_cli.py  watchdog.py
data/: adult_domains.txt
tests/: conftest.py  test_alerter.py  test_pin_auth.py  test_summarizer.py  test_tracker.py  test_watchdog.py  test_windows.py
